# learnsdl

./: .gitignore  CMakeLists.txt  README.md  clean.sh  config.h.in  dependencies.sh  main.cpp  run.sh  setup.sh
libs/SDL2_image/include/SDL2_image/: SDL_image.h
libs/SDL2_ttf/include/SDL2_ttf/: SDL_ttf.h
src/: 01_hello_world.cpp  02_cleanup_code.cpp  03_load_image.cpp  04_handling_events.cpp  05_sprite_sheet.cpp  06_render_text.cpp  CMakeLists.txt  dont_in_main.cpp  helloworld.cpp  index.cpp  res_path.hpp  sdl_ext_libs.cpp
src/utils/: CMakeLists.txt  log.hpp  sdl_utility.cpp  sdl_utility.hpp
